fix:overflowing of modal for small screens

--- a/src/components/layout/MainSection.module.css
+++ b/src/components/layout/MainSection.module.css
@@ -172,10 +172,10 @@
         height: 5.5rem;
         width: 5.5rem;
         padding: 2rem;
-        font-size: 3.5rem;
+        font-size: 3rem;
 
     }
     .heading{
-        font-size: 3.5rem;
+        font-size: 3rem;
     }
 }
