--- a/src/components/ui/Modal.module.css
+++ b/src/components/ui/Modal.module.css
@@ -12,7 +12,6 @@
 }
 
 .container{
-    /* height: 40vh; */
     width: 50vw;
     border-radius: 0.6rem;
     padding: 2rem 3.5rem;
@@ -119,6 +118,15 @@
 @media(max-width:545px){
     .container{
         width: 90vw;
+        
+    }
+    .create_btn{
+        width: 80%;
+        position: absolute;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+           
     }
 }
 
@@ -126,5 +134,12 @@
     .container label{
         font-size: 2rem;
         letter-spacing: 0rem;
+    }
+    .container{
+        padding: 2rem 2rem;
+    }
+    .color_selector{
+        gap: 1rem;
+        margin-left: 2rem;
     }
 }
