--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ html{
 
 @media(max-width:768px){
     html{
-        font-size: 55%;
+        font-size: 52%;
     }
     
 }
